--- a/index.html
+++ b/index.html
@@ -25,27 +25,27 @@
 
 <footer class="footer-Container1">
     <section>
-        <ul >
+        <ul>
             <h1>What is Mycrafts</h1>
             <p>A one-of-a-kind creative community</p>
             <p>Support independent creators</p>
             <p>Peace of mind</p>
-            <p class='white-txt'>MyCrafts is a global online marketplace, where people come together to make, sell, buy, and collect unique items.</p>
+            <p class='white-txt'>MyCrafts is a global online marketplace, where people come together to make, sell, buy,
+                and collect unique items.</p>
         </ul>
     </section>
 
-
     <section class="footer-Container2">
-            <div>
+        <div>
             <ul>
                 <h3>Shop</h3><br>
                 <a href="#">Gift Cards</a><br>
                 <a href="#">Blog</a><br>
                 <a href="#">Journal</a><br>
             </ul>
-            </div>
+        </div>
 
-            <div>
+        <div>
             <ul>
                 <h3>Sell</h3>
                 <a href="#">Seller handbook</a><br>
@@ -53,9 +53,9 @@
                 <a href="#">Forums</a><br>
                 <a href="#">Affiliates</a><br>
             </ul>
-            </div>
+        </div>
 
-            <div>
+        <div>
             <ul>
                 <h3>About</h3>
                 <a href="#">MyCrafts, Inc.</a><br>
@@ -63,17 +63,22 @@
                 <a href="#">Investors</a><br>
                 <a href="#">Carrers</a><br>
             </ul>
-            </div>
+        </div>
 
-            <div>     
+        <div>
             <ul>
                 <h3>Help</h3>
                 <a href="#">Help Center</a><br>
                 <a href="#">Privacy settings</a><br>
             </ul>
-            </div>
+        </div>
+    </section>
 
-        </section>
-    </footer>
+    <section class="footer-Container3">
+                    <p>Shop © 2019 MyCrafts, Inc.       Terms of Use   Privacy </p>
+ 
+    </section>
+
+</footer>
 
 </html>
